<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailUserActivity">

    <ImageView
        android:id="@+id/iv_avatar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/btn_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:drawableEnd="@drawable/ic_outline_share"
        android:text="@string/share_profile"
        tools:ignore="TextContrastCheck"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_name" />

    <TextView
        android:id="@+id/tv_username"
        style="@style/TextContent.Title"
        android:layout_marginTop="16dp"
        tools:text="@string/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_avatar" />

    <TextView
        android:id="@+id/tv_name"
        style="@style/TextContent.Subtitle"
        android:layout_marginTop="8dp"
        tools:text="@string/name"
        app:layout_constraintEnd_toEndOf="@+id/tv_username"
        app:layout_constraintStart_toStartOf="@+id/tv_username"
        app:layout_constraintTop_toBottomOf="@+id/tv_username" />

    <TextView
        android:id="@+id/tv_followers"
        style="@style/TextContent.Content"
        android:layout_marginTop="16dp"
        app:drawableStartCompat="@drawable/ic_outline_followers"
        app:drawableTint="@color/teal_dark_primary"
        app:layout_constraintEnd_toEndOf="@+id/btn_share"
        app:layout_constraintStart_toStartOf="@+id/btn_share"
        app:layout_constraintTop_toBottomOf="@+id/btn_share"
        tools:text="@string/follow" />

    <TextView
        android:id="@+id/tv_company"
        style="@style/TextContent.Content"
        android:layout_marginTop="8dp"
        tools:text="@string/company"
        app:drawableStartCompat="@drawable/ic_outline_company"
        app:layout_constraintEnd_toEndOf="@+id/tv_followers"
        app:layout_constraintStart_toStartOf="@+id/tv_followers"
        app:layout_constraintTop_toBottomOf="@+id/tv_followers"
        app:drawableTint="@color/teal_dark_primary" />

    <TextView
        android:id="@+id/tv_repository"
        style="@style/TextContent.Content"
        android:layout_marginTop="8dp"
        tools:text="@string/repository"
        app:drawableStartCompat="@drawable/ic_outline_repository"
        app:layout_constraintEnd_toEndOf="@+id/tv_company"
        app:layout_constraintStart_toStartOf="@+id/tv_company"
        app:layout_constraintTop_toBottomOf="@+id/tv_company"
        app:drawableTint="@color/teal_dark_primary" />

    <TextView
        android:id="@+id/tv_location"
        style="@style/TextContent.Content"
        android:layout_marginTop="8dp"
        tools:text="@string/location"
        app:drawableStartCompat="@drawable/ic_outline_location"
        app:layout_constraintEnd_toEndOf="@+id/tv_repository"
        app:layout_constraintStart_toStartOf="@+id/tv_repository"
        app:layout_constraintTop_toBottomOf="@+id/tv_repository"
        app:drawableTint="@color/teal_dark_primary" />

</androidx.constraintlayout.widget.ConstraintLayout>